@@ -236,7 +236,7 @@ IntrusivePtr<Val> NameExpr::Eval(Frame* f) const
 		return make_intrusive<Val>(id->GetType(), true);
 
 	if ( id->IsGlobal() )
-		v = {NewRef{}, id->ID_Val()};
+		v = id->GetVal();
 
 	else if ( f )
 		v = {NewRef{}, f->GetElement(id.get())};
