@@ -92,10 +92,10 @@ void Manager::InitPostScript()
 	{
 	auto id = global_scope()->Lookup("Tunnel::vxlan_ports");
 
-	if ( ! (id && id->ID_Val()) )
+	if ( ! (id && id->GetVal()) )
 		reporter->FatalError("Tunnel::vxlan_ports not defined");
 
-	auto table_val = id->ID_Val()->AsTableVal();
+	auto table_val = id->GetVal()->AsTableVal();
 	auto port_list = table_val->ToPureListVal();
 
 	for ( auto i = 0; i < port_list->Length(); ++i )
