@@ -31,7 +31,7 @@ refine flow MQTT_Flow += {
 			                           reinterpret_cast<const char*>(${msg.topic.str}.begin())));
 
 			auto len = ${msg.payload}.length();
-			auto max = analyzer::MQTT::MQTT_Analyzer::max_payload_size->ID_Val()->AsCount();
+			auto max = analyzer::MQTT::MQTT_Analyzer::max_payload_size->GetVal()->AsCount();
 
 			if ( len > static_cast<int>(max) )
 				len = max;
